--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,11 @@
     padding: 0;
 }
 
+body
+{
+    background-color: black;
+}
+
 #canvas
 {
     border: 10px solid black;
@@ -64,4 +69,13 @@
     text-align: center;
     font-size: 50px;
     background-color: black
+}
+
+#info
+{
+    margin-top: 10px;
+    margin-left: 180px;
+    width: 1000px;
+    text-align: center;
+    color: white;
 }
